--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body {
 
 .logo-blue,
 .logo-black {
-  font-family: "Raleway" sans-serif;
+  font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
